--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Your awesome title
-description: My awesome site
+title: hintbw's Home on the Web
+description: My personal blog, with a focus on technology and engineering topics with the occasional tangent to other topics
 permalink: /:slugified_categories/:title/
 
 date_format: "%b %-d, %Y"
