--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,37 +1,37 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.245.2/containers/ruby
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/ruby
 {
-	"name": "Ruby",
+	"name": "Jekyll & Node",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": { 
-			// Update 'VARIANT' to pick a Ruby version: 3, 3.1, 3.0, 2, 2.7
-			// Append -bullseye or -buster to pin to an OS version.
-			// Use -bullseye variants on local on arm64/Apple Silicon.
-			"VARIANT": "3.0",
+			// Update 'VARIANT' to pick a Ruby version: 2, 2.7, 2.6, 2.5
+			"VARIANT": "2.7",
 			// Options
-			"NODE_VERSION": "16"
+			"INSTALL_NODE": "false",
+			"NODE_VERSION": "lts/*"
 		}
 	},
 
-	// Configure tool-specific properties.
-	"customizations": {
-		// Configure properties specific to VS Code.
-		"vscode": {
-			// Add the IDs of extensions you want installed when the container is created.
-			"extensions": [
-				"rebornix.Ruby"
-			]
-		}
+	// Set *default* container specific settings.json values on container create.
+	"settings": { 
+		"terminal.integrated.shell.linux": "/bin/bash"
 	},
+
+	// Add the IDs of extensions you want installed when the container is created.
+	"extensions": [
+		"rebornix.Ruby",
+		// "dbaeumer.vscode-eslint",
+		"davidanson.vscode-markdownlint",
+		"yzhang.markdown-all-in-one"
+	],
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [ 3000, 4000 ],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "ruby --version",
+	// "postCreateCommand": "cd dev-awesome-tool && npm i",
 
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
-
 }
