--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,10 +6,10 @@
 		"dockerfile": "Dockerfile",
 		"args": { 
 			// Update 'VARIANT' to pick a Ruby version: 2, 2.7, 2.6, 2.5
-			"VARIANT": "2.7",
+			"VARIANT": "2.7"
 			// Options
-			"INSTALL_NODE": "false",
-			"NODE_VERSION": "lts/*"
+			// "INSTALL_NODE": "false",
+			// "NODE_VERSION": "lts/*"
 		}
 	},
 
@@ -20,7 +20,7 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"rebornix.Ruby",
+		// "rebornix.Ruby",
 		// "dbaeumer.vscode-eslint",
 		"davidanson.vscode-markdownlint",
 		"yzhang.markdown-all-in-one"
