--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,29 +1,21 @@
-name: Deploy to GitHub Pages
+name: Build and deploy Jekyll site to GitHub Pages
 
 on:
   push:
     branches:
-      - main
+      - main # or master before October 2020
 
 jobs:
-  build-and-deploy:
+  pages:
     runs-on: ubuntu-latest
-    env:
-      JEKYLL_ENV: production
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
         with:
-          node-version: '14'
-          cache: npm
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-          bundler-cache: true
-      - run: npm install
-      - run: npm run prod
-      - run: bundle exec jekyll build
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+      - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
+        with:                                # Some relative inputs of your action
+          token: ${{ secrets.GITHUB_TOKEN }}
