--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/ruby
 {
-	"name": "Jekyll & Node",
+	"name": "Jekyll Blog Site",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": { 
